--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -22,15 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install selenium webdriver-manager pandas
-
-      - name: Install Chrome and dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget gnupg
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install -y ./google-chrome-stable_current_amd64.deb
-          sudo apt-get install -y libappindicator3-1 libindicator7
+          pip install requests beautifulsoup4 pandas
 
       - name: Run IPO scraper script
         run: |
