--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -34,6 +34,14 @@ jobs:
       - name: Run bot script
         run: python bot.py  # Ensure bot.py is at the root of your repo
 
+      - name: Commit and Push updated CSV to main repo
+        run: |
+          git config --global user.name 'ClashMasterRaghav'  # Replace with your GitHub username
+          git config --global user.email 'gamescocclans123@gmail.com'  # Replace with your email
+          git add ipo_data.csv
+          git commit -m "Update IPO data"
+          git push origin main
+
       - name: Upload IPO data CSV
         uses: actions/upload-artifact@v3
         with:
