--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -34,15 +34,18 @@ jobs:
       - name: Run bot script
         run: python bot.py  # Ensure bot.py is at the root of your repo
 
-      - name: Commit and Push updated CSV to main repo
+      - name: Stage and Commit Changes
         run: |
           git config --global user.name 'ClashMasterRaghav'
           git config --global user.email 'gamescocclans123@gmail.com'
+          git add ipo_data.csv
+          git commit -m "Intermediate commit for rebase"
+
+      - name: Pull and Push Changes
+        run: |
           git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/ClashMasterRaghav/prrintmoney.com.git
           git pull origin main --rebase  # Pull new changes to avoid conflicts
-          git add ipo_data.csv
-          git commit -m "Update IPO data"
-          git push origin main
+          git push origin main  # Push the final changes
 
       - name: Debug Git State
         run: |
