--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -2,7 +2,7 @@ name: Run Bot Script
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Run every 1 hour
+    - cron: '0 7-23 * * *'  # Run every hour from 8:00 AM to 11:00 PM (midnight)
   workflow_dispatch:  # Allow manual runs
 
 jobs:
