--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -34,22 +34,22 @@ jobs:
       - name: Run bot script
         run: python bot.py  # Ensure bot.py is at the root of your repo
 
-      - name: Commit IPO Data Changes
+      - name: Commit All Changes
         run: |
           git config --global user.name 'ClashMasterRaghav'
           git config --global user.email 'gamescocclans123@gmail.com'
-          git add ipo_data.csv
-          git diff --quiet ipo_data.csv || git commit -m "Update IPO data file"
+          git add .
+          git diff --quiet || git commit -m "Update website with latest IPO data"
 
-      - name: Pull and Push Changes
+      - name: Pull and Push with Rebase
         run: |
           git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/ClashMasterRaghav/prrintmoney.com.git
-          git stash push --include-untracked  # Stash all changes, including new files
-          git pull origin main --rebase
-          git stash apply || true  # Reapply stashed changes
-          git add ipo_data.csv  # Ensure IPO data updates are staged
-          git diff --quiet || git commit -m "Sync IPO data changes after rebase"
-          git push origin main
+          git stash push --include-untracked  # Stash all changes (if any)
+          git pull origin main --rebase       # Pull and rebase
+          git stash pop || true               # Reapply stashed changes
+          git add .                           # Stage all changes
+          git diff --quiet || git commit -m "Sync changes after rebase"
+          git push origin main                # Push to main
 
       - name: Debug Git State
         run: |
