--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -1,8 +1,8 @@
 name: Run Bot Script
 
 on:
-  schedule:
-    - cron: '30 2-17 * * *'  # Run every hour from 8:00 AM to 11:00 PM IST
+#  schedule:
+#    - cron: '30 2-17 * * *'  # Run every hour from 8:00 AM to 11:00 PM IST
   workflow_dispatch:  # Allow manual runs
 
 jobs:
